--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	  <img id="hero-bg" src="assets/img/york-bg1.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center text-center mt-auto">
-        <h2 data-aos="fade-up" data-aos-delay="100" class="">THE 17th CONFERENCE ON<br><span>SPATIAL INFORMATION THEORY (COSIT)</span></h2>
+        <h2 data-aos="fade-up" data-aos-delay="100" class="">The 17th Conference on<br><span>Spatial Information Theory (COSIT)</span></h2>
         <p data-aos="fade-up" data-aos-delay="200">15-18 September, York, UK</p>
         <div data-aos="fade-up" data-aos-delay="300" class="">
           <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
@@ -106,7 +106,7 @@
           <div class="row">
             <div class="col-lg-6">
               <h2>About COSIT</h2>
-              <p>Established in 1993, the Conference on Spatial Information Theory (COSIT) is a biennial international conference series concerned with theoretical aspects of space and spatial information.</p>
+              <p>Established in 1993, COSIT is a biennial international conference series concerned with theoretical aspects of space and spatial information.</p>
             </div>
             <div class="col-lg-3">
               <h3>Where</h3>
