--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-sm-block" href="#buy-tickets">Register</a>
+      <a class="cta-btn d-none d-xl-block" href="#buy-tickets">Register</a>
 
     </div>
   </header>
