--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </ul>
           </li>
           <li><a href="#contact">Contact</a></li>
+          <li class="d-xl-none"><a class="cta-btn" href="#buy-tickets">Register</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
