--- a/index.html
+++ b/index.html
@@ -51,12 +51,27 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
-          <li><a href="#speakers">Speakers</a></li>
-          <li><a href="#schedule">Schedule</a></li>
-          <li><a href="#venue">Venue</a></li>
-          <li><a href="#hotels">Hotels</a></li>
-          <li><a href="#gallery">Gallery</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="#schedule">Program</a></li>
+          <li class="dropdown"><a href="#"><span>Participation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#speakers">Keynote Speakers</a></li>
+              <li><a href="#cfp">Call for Papers</a></li>
+              <li><a href="#submissions">Submissions</a></li>
+              <li><a href="#dates">Important Dates</a></li>
+              <li><a href="#register">Registration</a></li>
+            </ul>
+          </li>
+          <li class="dropdown"><a href="#"><span>Location</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#york">York</a></li>
+              <li><a href="#venue">Conference Venue</a></li>
+              <li><a href="#transport">Transportation</a></li>
+              <li><a href="#hotels">Accommodations</a></li>
+              <li><a href="#visa">Visa Information</a></li>
+              <li><a href="#gallery">Gallery</a></li>
+            </ul>
+          </li>
+          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -72,7 +87,7 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contact</a></li>
           <li class="d-xl-none"><a class="cta-btn" href="#buy-tickets">Register</a></li>
         </ul>
