comment_out_speakers

--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Event Speakers<br></h2>
+        <h2>Keynote Speakers<br></h2>
+
+        <p>Coming soon!</p>
 
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="row gy-4">
 
@@ -169,7 +171,7 @@
             </div>
           </div><!-- End Team Member -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
               <img src="assets/img/speakers/speaker-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -185,9 +187,9 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>End Team Member -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="member">
               <img src="assets/img/speakers/speaker-3.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -203,9 +205,9 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>End Team Member -->
 
-          <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="member">
               <img src="assets/img/speakers/speaker-4.jpg" class="img-fluid" alt="">
               <div class="member-info">
@@ -221,11 +223,11 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div>End Team Member
 
-        </div>
+        </div> -->
 
-      </div>
+      <!-- </div> --> -->
 
     </section><!-- /Speakers Section -->
 
