--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Keynote Speakers<br></h2>
-        <p>Coming soon!</p>
+        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
       <!-- <div class="container">
