--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
     </section><!-- /Hero Section -->
 
     <!-- Speakers Section -->
-    <section id="speakers" class="speakers section">
+    <!-- <section id="speakers" class="speakers section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Keynote Speakers<br></h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div>End Section Title -->
 
       <!-- <div class="container">
 
