--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </section><!-- /Hero Section -->
 
     <!-- Speakers Section -->
-    <section id="speakers" class="speakers section">
+    <!-- <section id="speakers" class="speakers section"> -->
 
       <!-- Section Title -->
       <!-- <div class="container section-title" data-aos="fade-up"> -->
@@ -227,10 +227,10 @@
 
       <!-- </div> --> -->
 
-    </section><!-- /Speakers Section -->
+    <!-- </section>/Speakers Section -->
 
     <!-- Schedule Section -->
-    <section id="schedule" class="schedule section">
+    <!-- <section id="schedule" class="schedule section"> -->
 
       <!-- Section Title -->
       <!-- <div class="container section-title" data-aos="fade-up">
@@ -480,7 +480,7 @@
         <!-- </div>
 
       </div> -->
-    </section><!-- /Schedule Section -->
+    <!-- </section>/Schedule Section -->
 
     <!-- Venue Section -->
     <section id="venue" class="venue section">
