--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
 
   </main>
 
-  <footer id="footer" class="footer dark-background">
+  <!-- <footer id="footer" class="footer dark-background">
 
     <div class="footer-top">
       <div class="container">
@@ -1038,25 +1038,25 @@
 
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="copyright text-center">
+    <!-- <div class="copyright text-center">
       <div class="container d-flex flex-column flex-lg-row justify-content-center justify-content-lg-between align-items-center">
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div>
             © Copyright <strong><span>COSIT 2026</span></strong>. All Rights Reserved
           </div>
-          <div class="credits">
+          <div class="credits"> -->
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
           </div>
-        </div>
+        </div> -->
 
-        <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
+        <!-- <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
           <a href=""><i class="bi bi-twitter-x"></i></a>
           <a href=""><i class="bi bi-facebook"></i></a>
           <a href=""><i class="bi bi-instagram"></i></a>
@@ -1066,7 +1066,7 @@
       </div>
     </div>
 
-  </footer>
+  </footer> -->
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
