--- a/index.html
+++ b/index.html
@@ -824,11 +824,11 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Buy Tickets<br></h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Registration<br></h2>
+        <p>Comming Soon!</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="row gy-4 pricing-item" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
@@ -847,9 +847,10 @@
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
           </div>
-        </div><!-- End Pricing Item -->
+        </div> -->
+        <!-- End Pricing Item -->
 
-        <div class="row gy-4 pricing-item featured mt-4" data-aos="fade-up" data-aos-delay="200">
+        <!-- <div class="row gy-4 pricing-item featured mt-4" data-aos="fade-up" data-aos-delay="200">
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <h3>Premium Access<br></h3>
           </div>
@@ -866,9 +867,10 @@
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
           </div>
-        </div><!-- End Pricing Item -->
+        </div> -->
+        <!-- End Pricing Item -->
 
-        <div class="row gy-4 pricing-item mt-4" data-aos="fade-up" data-aos-delay="300">
+        <!-- <div class="row gy-4 pricing-item mt-4" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <h3>Pro Access<br></h3>
           </div>
@@ -885,9 +887,10 @@
           <div class="col-lg-3 d-flex align-items-center justify-content-center">
             <div class="text-center"><a href="#" class="buy-btn">Buy Now</a></div>
           </div>
-        </div><!-- End Pricing Item -->
+        </div> -->
+        <!-- End Pricing Item -->
 
-      </div>
+      <!-- </div> -->
 
     </section><!-- /Buy Tickets Section -->
 
