--- a/index.html
+++ b/index.html
@@ -635,15 +635,16 @@
     </section><!-- /Hotels Section -->
 
     <!-- Gallery Section -->
-    <section id="gallery" class="gallery section">
+    <!-- <section id="gallery" class="gallery section"> -->
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <!-- <div class="container section-title" data-aos="fade-up">
         <h2>Gallery</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
-      </div><!-- End Section Title -->
+      </div> -->
+      <!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+      <!-- <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
@@ -687,11 +688,12 @@
             <div class="swiper-slide"><a class="glightbox" data-gallery="images-gallery" href="assets/img/event-gallery/event-gallery-8.jpg"><img src="assets/img/event-gallery/event-gallery-8.jpg" class="img-fluid" alt=""></a></div>
           </div>
           <div class="swiper-pagination"></div>
-        </div>
+        </div> -->
 
-      </div>
+      <!-- </div>
 
-    </section><!-- /Gallery Section -->
+    </section> -->
+    <!-- /Gallery Section -->
 
     <!-- Sponsors Section -->
     <section id="sponsors" class="sponsors section light-background">
