--- a/index.html
+++ b/index.html
@@ -587,11 +587,11 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Hotels</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Accommodations</h2>
+        <p>Comming soon!</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+      <!-- <div class="container">
 
         <div class="row gy-4">
 
@@ -604,9 +604,10 @@
               <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
               <p>0.4 Mile from the Venue</p>
             </div>
-          </div><!-- End Card Item -->
+          </div> -->
+          <!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="card h-100">
               <div class="card-img">
                 <img src="assets/img/hotels-2.jpg" alt="" class="img-fluid">
@@ -615,9 +616,10 @@
               <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
               <p>0.5 Mile from the Venue</p>
             </div>
-          </div><!-- End Card Item -->
+          </div> -->
+          <!-- End Card Item -->
 
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="card h-100">
               <div class="card-img">
                 <img src="assets/img/hotels-3.jpg" alt="" class="img-fluid">
@@ -626,11 +628,12 @@
               <div class="stars"><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i></div>
               <p>0.6 Mile from the Venue</p>
             </div>
-          </div><!-- End Card Item -->
+          </div> -->
+          <!-- End Card Item -->
 
-        </div>
+        <!-- </div>
 
-      </div>
+      </div> -->
 
     </section><!-- /Hotels Section -->
 
