--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <ul>
               <li><a href="#york">York</a></li>
               <li><a href="#venue">Conference Venue</a></li>
-              <li><a href="#transport">Transportation</a></li>
+              <!-- <li><a href="#transport">Transportation</a></li> -->
               <li><a href="#hotels">Accommodations</a></li>
               <li><a href="#visa">Visa Information</a></li>
-              <li><a href="#gallery">Gallery</a></li>
+              <!-- <li><a href="#gallery">Gallery</a></li> -->
             </ul>
           </li>
           <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
