--- a/index.html
+++ b/index.html
@@ -842,7 +842,7 @@
     <!-- /Faq Section -->
 
     <!-- Buy Tickets Section -->
-    <section id="buy-tickets" class="buy-tickets section light-background">
+    <section id="register" class="buy-tickets section light-background">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
