--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
             </ul>
           </li> -->
           <li><a href="#contact">Contact</a></li>
-          <li class="d-xl-none"><a class="cta-btn" href="#buy-tickets">Register</a></li>
+          <li class="d-xl-none"><a class="cta-btn" href="#register">Register</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="cta-btn d-none d-xl-block" href="#buy-tickets">Register</a>
+      <a class="cta-btn d-none d-xl-block" href="#register">Register</a>
 
     </div>
   </header>
