--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Conference Venue<br></h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h3>The<br> Hospitium</h3>
+        <p>The 14th century Hospitium is a two-storey listed building set within the beautiful York Museum Gardens in York city centre, overlooked by the striking ruins of the Grade 1 listed St. Mary’s Abbey.​</p>
       </div><!-- End Section Title -->
 
       <div class="container-fluid" data-aos="fade-up">
