--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Conference Venue<br></h2>
-        <h3>The<br> Hospitium</h3>
+        <h3><em>The</em> Hospitium</h3>
         <p>The 14th century Hospitium is a two-storey listed building set within the beautiful York Museum Gardens in York city centre, overlooked by the striking ruins of the Grade 1 listed St. Mary’s Abbey.​</p>
       </div><!-- End Section Title -->
 
