--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Conference Venue<br></h2>
-        <h3><em>The</em> Hospitium</h3>
-        <p>The 14th century Hospitium is a two-storey listed building set within the beautiful York Museum Gardens in York city centre, overlooked by the striking ruins of the Grade 1 listed St. Mary’s Abbey.​</p>
+        <h3><b>The</b> Hospitium</h3>
+        <p>The Hospitium is a 14th century two-storey building set within the beautiful York Museum Gardens, overlooked by the striking ruins of the Grade 1 listed St. Mary’s Abbey.​</p>
       </div><!-- End Section Title -->
 
       <div class="container-fluid" data-aos="fade-up">
