--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Conference Venue<br></h2>
-        <h3><b>The</b> Hospitium</h3>
+        <h3><b>The</b> Hospitium, York</h3>
         <p>The Hospitium is a 14th century two-storey building set within the beautiful York Museum Gardens, overlooked by the striking ruins of the Grade 1 listed St. Mary’s Abbey.​</p>
       </div><!-- End Section Title -->
 
@@ -496,14 +496,14 @@
 
         <div class="row g-0">
           <div class="col-lg-6 venue-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d931.6583961651903!2d-1.0880803436226019!3d53.95604274848342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48793107677870af%3A0xa98faf6a3f6bb242!2sPriory%20Street%20Centre!5e0!3m2!1sen!2sch!4v1748608855985!5m2!1sen!2sch" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d829.9116379120615!2d-1.0900829239856762!3d53.96114831711164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487931a78a3d2c65%3A0xf8c7d88f9ec51723!2sYork%20Venues%3A%20The%20Hospitium!5e0!3m2!1sen!2sch!4v1756733477466!5m2!1sen!2sch" frameborder="0" style="border:0" allowfullscreen=""></iframe>
           </div>
 
           <div class="col-lg-6 venue-info">
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8 position-relative">
-                <h3>Priory Street Center, York, UK</h3>
-                <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p>
+                <!-- <h3>Priory Street Center, York, UK</h3> -->
+                <!-- <p>Iste nobis eum sapiente sunt enim dolores labore accusantium autem. Cumque beatae ipsam. Est quae sit qui voluptatem corporis velit. Qui maxime accusamus possimus. Consequatur sequi et ea suscipit enim nesciunt quia velit.</p> -->
               </div>
             </div>
           </div>
