--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <h2 data-aos="fade-up" data-aos-delay="100" class="">The 17th Conference on<br><span>Spatial Information Theory (COSIT)</span></h2>
         <p data-aos="fade-up" data-aos-delay="200">22-25 September, York, UK</p>
         <div data-aos="fade-up" data-aos-delay="300" class="">
-          <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn mt-3"></a>
+          <a href="https://www.youtube.com/watch?v=yj0RCUsa4Vs" class="glightbox pulsating-play-btn mt-3"></a>
         </div>
       </div>
 
