--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Conference Venue<br></h2>
-        <h3><b>The</b> Hospitium, York</h3>
+        <h3><b>The</b> Hospitium</h3>
         <p>The Hospitium is a 14th century two-storey building set within the beautiful York Museum Gardens, overlooked by the striking ruins of the Grade 1 listed St. Mary’s Abbey.​</p>
       </div><!-- End Section Title -->
 
@@ -516,32 +516,32 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/psc6.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/psc6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/hosp2.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/hosp2.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/psc1.png" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/psc1.png" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/hosp6.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/hosp6.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/psc2.png" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/psc2.png" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/hosp7.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/hosp7.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/psc3.png" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/psc3.png" alt="" class="img-fluid">
+              <a href="assets/img/venue-gallery/hosp3.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/venue-gallery/hosp3.jpg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
