--- a/index.html
+++ b/index.html
@@ -482,6 +482,15 @@
       </div> -->
     <!-- </section>/Schedule Section -->
 
+    <section id="york">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>York<br></h2>
+        <p>York, a historic city nestled in northern England, boasts a rich history that stretches back to its Roman origins. Its urban landscape features the Gothic grandeur of York Minster, the narrow streets of the
+          Shambles, and remnants of Roman walls. It is an active urban hub of commerce, culture, and education, with a high density of entertainment venues. Its compact, walkable layout means it is regularly featured as one of the best cities to live in the UK.</p>
+      </div>
+
+    </section>
+
     <!-- Venue Section -->
     <section id="venue" class="venue section">
 
