--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <ul>
               <li><a href="#york">York</a></li>
               <li><a href="#venue">Conference Venue</a></li>
-              <!-- <li><a href="#transport">Transportation</a></li> -->
+              <li><a href="#transport">Transportation</a></li>
               <li><a href="#hotels">Accommodations</a></li>
               <li><a href="#visa">Visa Information</a></li>
               <!-- <li><a href="#gallery">Gallery</a></li> -->
@@ -488,7 +488,6 @@
         <p>York, a historic city nestled in northern England, boasts a rich history that stretches back to its Roman origins. Its urban landscape features the Gothic grandeur of York Minster, the narrow streets of the
           Shambles, and remnants of Roman walls. It is an active urban hub of commerce, culture, and education, with a high density of entertainment venues. Its compact, walkable layout means it is regularly featured as one of the best cities to live in the UK.</p>
       </div>
-
     </section>
 
     <!-- Venue Section -->
@@ -591,6 +590,15 @@
       </div>
 
     </section><!-- /Venue Section -->
+
+    <section id="transport">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Transportation<br></h2>
+        <p>While York does not have an international airport itself, it is located on the East Coast Mainline of the UK rail network and continues to be a major rail hub. 
+          There are frequent, direct trains to London (~2hrs), Leeds (30mins), and Manchester (~1.5hrs). Trains from Manchester Airport are direct (hourly), while connections from Leeds-Bradford Airport and London 
+          Airports require an additional train connection. The centre of York is very old and compact, and there are heavy limits on vehicular movement, thus making your experience pleasant and enjoyable.</p>
+      </div>
+    </section>
 
     <!-- Hotels Section -->
     <section id="hotels" class="hotels section">
