--- a/index.html
+++ b/index.html
@@ -607,9 +607,9 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Accommodations</h2>
         <p>York is a popular tourist city and has many hotels available within a walking distance to the conference venue. While York is not the cheapest city in the UK for hotels, there are a variety of options available. The map below shows some possibilities, all of which are less than a 30 minutes walk mile from the conference venue.</p>
-        
-        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6639.081436298787!2d-1.0933587110585286!3d53.962477333914606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sHotels!5e0!3m2!1sen!2sch!4v1756739389790!5m2!1sen!2sch" width="1200" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>      </div><!-- End Section Title -->
 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6639.238518084714!2d-1.0916785863854153!3d53.96149104941622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sHotels!5e0!3m2!1sen!2sch!4v1756739703052!5m2!1sen!2sch" width="1280" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div> 
       <!-- <div class="container">
 
         <div class="row gy-4">
