--- a/index.html
+++ b/index.html
@@ -606,8 +606,9 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Accommodations<br></h2>
-        <p>York is a popular tourist city and has many hotels available within a walking distance to the conference venue. While York is not the cheapest city in the UK for hotels, there are a variety of options available. The map below shows some possibile accomodations arounbd the conference venue. Click on <a href="https://maps.app.goo.gl/PFnZ2qcJK34adoQVA" target="_blank"> View larger map</a> to see the location of the conference venue and the walking distance to each listed accomodation. We highly suggest that you book a hotel room earlier than later as September can be a busy month in York.<br></p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d4694.671305214657!2d-1.092036!3d53.961307!3m2!1i1024!2i768!4f13.1!2m1!1shotels%20near%20York%20Venues%3A%20The%20Hospitium!5e0!3m2!1sen!2sch!4v1756740542211!5m2!1sen!2sch" width="1200" height="800" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>York is a popular tourist city and has many hotels available within a walking distance to the conference venue. While York is not the cheapest city in the UK for hotels, there are a variety of options available. The map below shows some possibile accomodations arounbd the conference venue. Click on <a href="https://maps.app.goo.gl/cVVvVwVhJWLYbuWq5" target="_blank"> View larger map</a> to see the location of the conference venue and the walking distance to each listed accomodation. We highly suggest that you book a hotel room earlier than later as September can be a busy month in York.<br></p>
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d4694.745234162121!2d-1.0864999205932626!3d53.960650535201786!3m2!1i1024!2i768!4f13.1!2m1!1shotels%20near%20York%20Venues%3A%20The%20Hospitium!5e0!3m2!1sen!2sch!4v1756741054858!5m2!1sen!2sch" width="1200" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
         <!-- <div class="container">
