--- a/index.html
+++ b/index.html
@@ -659,6 +659,13 @@
     <!-- </section> -->
     <!-- /Hotels Section -->
 
+    <section id="visa">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Visa Information<br></h2>
+        <p>Please visit<a href="https://www.gov.uk/check-uk-visa" target="_blank"> this website</a> to check if you will need a UK visa to attend the conference.</p>
+      </div>
+    </section>
+
     <!-- Gallery Section -->
     <!-- <section id="gallery" class="gallery section"> -->
 
