--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 </div>
               </div>
             </div>
-          </div><!-- End Team Member -->
+          </div> End Team Member -->
 
           <!-- <div class="col-xl-3 col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="member">
