--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home<br></a></li>
-          <li><a href="#schedule">Program</a></li>
+          <!-- <li><a href="#schedule">Program</a></li> -->
           <li class="dropdown"><a href="#"><span>Participation</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#speakers">Keynote Speakers</a></li>
@@ -68,6 +68,15 @@
               <li><a href="#transport">Transportation</a></li>
               <li><a href="#hotels">Accommodations</a></li>
               <li><a href="#visa">Visa Information</a></li>
+              <!-- <li><a href="#gallery">Gallery</a></li> -->
+            </ul>
+          </li>
+          <li class="dropdown"><a href="#"><span>Organization</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#org-com">Organizing Committee</a></li>
+              <li><a href="#pro-com">Program Committee</a></li>
+              <li><a href="#sponsors">Sponsors</a></li>
+              <li><a href="https://geosensor.net/cositseries/" target="_blank">Conference Series</a></li>
               <!-- <li><a href="#gallery">Gallery</a></li> -->
             </ul>
           </li>
