--- a/index.html
+++ b/index.html
@@ -827,9 +827,8 @@
       <div class="container">
     
         <!-- Section Title -->
-        <div class="section-header">
+        <div class="container section-title" data-aos="fade-up">
           <h2>Organizing Committee</h2>
-          <div class="underline"></div>
         </div>
     
         <div class="row gy-4 justify-content-center">
