--- a/index.html
+++ b/index.html
@@ -836,12 +836,12 @@
           <!-- Member 1 -->
           <div class="col-lg-4 col-md-5">
             <div class="member-info">
-              <h4>General Chair</h4>
-              <a href="https://example.com">
-                <b>Jane Doe</b>
+              <h3>General Chair</h3>
+              <a href="https://environment.leeds.ac.uk/geography/staff/9293/professor-ed-manley" target="_blank">
+                <b>Ed Manley</b>
               </a>
               <br>
-              <span>University of Example, Country</span>
+              <span>University of Leeds, UK</span>
             </div>
           </div>
     
