--- a/index.html
+++ b/index.html
@@ -852,15 +852,20 @@
               <a href="https://www.liverpool.ac.uk/people/gabriele-filomena" target="_blank">
                 <b>Gabriele Filomena</b>
                 <br>
-                <span>University of Liverpool, United Kingdom</span>
               </a>
+              <span>University of Liverpool, United Kingdom</span>
               <br>
               <a href="https://www.uni-augsburg.de/en/fakultaet/fai/geo/prof/geoinf/geoinf-team/s-timpf/" target="_blank">
                 <b>Sabine Timpf</b>
                 <br>
-                <span>University of Augsburg, United Kingdom</span>
               </a>
+              <span>University of Augsburg, Germany</span>
               <br>
+              <a href="https://www.bristol.ac.uk/people/person/Rui-Zhu-8537f231-1192-41d4-b8ff-ddc52cca4dfb/" target="_blank">
+                <b>Rui Zhu</b>
+                <br>
+              </a>
+              <span>University of Bristol, United Kingdom</span>
             </div>
           </div>
     
