--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
     
           <!-- Member 1 -->
           <div class="col-lg-4 col-md-5">
-            <div class="member-info center">
+            <div class="member-info">
               <h3>General Chair</h3>
               <a href="https://environment.leeds.ac.uk/geography/staff/9293/professor-ed-manley" target="_blank">
                 <b>Ed Manley</b>
