--- a/index.html
+++ b/index.html
@@ -889,12 +889,12 @@
           <!-- Member 3 -->
           <div class="col-lg-4 col-md-5">
             <div class="member-info">
-              <h4>Thematic Sessions Chair</h4>
-              <a href="https://example.com">
-                <b>Emily Johnson</b>
+              <h4>Themed Sessions Chair</h4>
+              <a href="https://planning.gatech.edu/people/clio-andris" target="_blank">
+                <b>Clio Andris</b>
               </a>
               <br>
-              <span>Sample University, USA</span>
+              <span>Georgia Institute of Technology, USA</span>
             </div>
           </div>
     
