--- a/index.html
+++ b/index.html
@@ -843,6 +843,14 @@
               <br>
               <span>University of Leeds, UK</span>
             </div>
+            <div class="member-info">
+              <h3>Mentorship Chair</h3>
+              <a href="https://spatial.uchicago.edu/directory/Crystal-Bae" target="_blank">
+                <b>Crystal Bae</b>
+              </a>
+              <br>
+              <span>University of Chicago, USA</span>
+            </div>
           </div>
     
           <!-- Member 2 -->
