--- a/index.html
+++ b/index.html
@@ -923,6 +923,14 @@
               <br>
               <span>University of Chicago, USA</span>
             </div>
+            <div class="member-info">
+              <h3>Communications Chair</h3>
+              <a href="https://www.geo.uzh.ch/en/department/Staff/kapajarmand.html" target="_blank">
+                <b>Armand Kapaj</b>
+              </a>
+              <br>
+              <span>University of Zurich, Switzerland</span>
+            </div>
           </div>
     
         </div>
