--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Visa Information<br></h2>
         <p>Please visit<a href="https://www.gov.uk/check-uk-visa" target="_blank"> this website</a> to check if you will
-          need a UK visa to attend the conference.</p>
+          need a UK visa to attend the conference. Please <a href="#contact">contact us</a> if you require a letter of invitation for the UK visa application.</p>
       </div>
     </section>
 
@@ -1150,7 +1150,7 @@
               data-aos-delay="200">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <p>St Mary’s Lodge, Museum Street, York, YO1 7FR</p>
+              <p>The Hospitium, Museum Gardens, York YO30 7DR, United Kingdom</p>
             </div>
           </div><!-- End Info Item -->
 
@@ -1168,7 +1168,7 @@
               data-aos-delay="400">
               <i class="bi bi-envelope"></i>
               <h3>Email Us</h3>
-              <p>info@example.com</p>
+              <p><a href="mailto:cosit.uk@gmail.com">cosit.uk@gmail.com</a></p>
             </div>
           </div><!-- End Info Item -->
 
