--- a/index.html
+++ b/index.html
@@ -1207,9 +1207,9 @@
                 <!-- <input type="hidden" name="_redirect" value="https://yoursite.com/thanks.html"> -->
     
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
+                  <!-- <div class="loading">Loading</div>
                   <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div> -->
     
                   <button type="submit">Send Message</button>
                 </div>
