--- a/index.html
+++ b/index.html
@@ -1151,7 +1151,7 @@
               data-aos-delay="200">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <p>The Hospitium, Museum Gardens, York YO30 7DR, United Kingdom</p>
+              <p>Museum Gardens, York YO30 7DR, United Kingdom</p>
             </div>
           </div><!-- End Info Item -->
 
