--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <section id="cfp">
       <div class="container section-title" data-aos="fade-up">
         <h2>Call for Papers<br></h2>
-        <p>Comming soon!</p>
+        <p>Coming soon!</p>
       </div>
     </section>
 
@@ -509,14 +509,14 @@
     <section id="submissions">
       <div class="container section-title" data-aos="fade-up">
         <h2>Submissions<br></h2>
-        <p>Comming soon!</p>
+        <p>Coming soon!</p>
       </div>
     </section>
 
     <section id="dates">
       <div class="container section-title" data-aos="fade-up">
         <h2>Important Dates<br></h2>
-        <p>Comming soon!</p>
+        <p>Coming soon!</p>
       </div>
     </section>
 
@@ -526,7 +526,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Registration<br></h2>
-        <p>Comming soon!</p>
+        <p>Coming soon!</p>
       </div><!-- End Section Title -->
 
       <!-- <div class="container">
@@ -986,7 +986,7 @@
     <section id="pro-com">
       <div class="container section-title" data-aos="fade-up">
         <h2>Program Committee<br></h2>
-        <p>Comming soon!</p>
+        <p>Coming soon!</p>
       </div>
     </section>
 
@@ -996,7 +996,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Sponsors</h2>
-        <p>Comming soon!</p>
+        <p>Coming soon!</p>
       </div><!-- End Section Title -->
 
       <!-- <div class="container" data-aos="fade-up" data-aos-delay="100">
