--- a/index.html
+++ b/index.html
@@ -499,6 +499,15 @@
 
 
     <section id="cfp">
+      <style>
+        #cfp p {
+          text-align: justify;
+        }
+      
+        #cfp b {
+          color: #F82249;
+        }
+      </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Call for Papers<br></h2>
         <p>We are delighted to announce that the 17th edition of the Conference on Spatial Information Theory (COSIT) will be held
