--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
       </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Call for Papers<br></h2>
-        <p>We are delighted to announce that the 17th edition of the Conference on Spatial Information Theory (COSIT) will
+        <p>We are delighted to announce that the 17<sub>th</sub> edition of the Conference on Spatial Information Theory (COSIT) will
           be held in York, United Kingdom, from September 22nd to 25th, 2026!<br></p>
         
         <p>Established in 1993, COSIT is a biennial international conference series concerned with theoretical aspects of
