--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
       </style>
       <div class="container section-title" data-aos="fade-up">
         <h2>Call for Papers<br></h2>
-        <p>We are delighted to announce that the 17<sub>th</sub> edition of the Conference on Spatial Information Theory (COSIT) will
-          be held in York, United Kingdom, from September 22nd to 25th, 2026!<br></p>
+        <p>We are delighted to announce that the 17<sup>th</sup> edition of the <b>Conference on Spatial Information Theory (COSIT)</b> will
+          be held in York, United Kingdom, from September 22<sup>nd</sup> to 25<sup>th</sup>, 2026!<br></p>
         
         <p>Established in 1993, COSIT is a biennial international conference series concerned with theoretical aspects of
           space and spatial information. Spatial information theory examines how space and the external environment is
