--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
           analytics and their interactions with other disciplines, including spatial analysis, Geographic Information Science,
           neuroscience, cartography, philosophy of mind, and computer science.<br></p>
         
-        <p>We welcome contributions covering conference-relevant topics, such as but not limited to:<br>
+        <p>We welcome contributions covering conference-relevant topics, such as but not limited to:<br></p>
         <ul>
           <li>activity-based models of spatial knowledge</li>
           <li>behavioural and cognitive geography</li>
@@ -579,7 +579,6 @@
           <li>theory and practice of spatial and temporal reasoning</li>
           <li>validity of spatial information methods</li>
         </ul>
-        </p>
         </div>
         </section>
 
